core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select__timezone_clause-2.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT MEAN(f64_field) FROM data WHERE time >= '2022-10-31T02:00:00Z' AND time < '2022-10-31T02:02:00Z' GROUP BY TIME(10s) TZ('Europe/London')\")"
---
Sort: time ASC NULLS LAST [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, Some("Europe/London"));N, mean:Float64;N]
  Projection: Dictionary(Int32, Utf8("data")) AS iox::measurement, time, avg(data.f64_field) AS mean [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, Some("Europe/London"));N, mean:Float64;N]
    GapFill: series=[], time=date_bin_wallclock(IntervalMonthDayNano("IntervalMonthDayNano { months: 0, days: 0, nanoseconds: 10000000000 }"), time, TimestampNanosecond(0, None)), fill=[avg(data.f64_field)], range=Included(Literal(TimestampNanosecond(1667181600000000000, Some("Europe/London")), None))..Included(Literal(TimestampNanosecond(1667181719999999999, Some("Europe/London")), None)) [time:Timestamp(Nanosecond, Some("Europe/London"));N, avg(data.f64_field):Float64;N]
      Aggregate: groupBy=[[date_bin_wallclock(IntervalMonthDayNano("IntervalMonthDayNano { months: 0, days: 0, nanoseconds: 10000000000 }"), time, TimestampNanosecond(0, None)) AS time]], aggr=[[avg(data.f64_field)]] [time:Timestamp(Nanosecond, Some("Europe/London"));N, avg(data.f64_field):Float64;N]
        Filter: time >= TimestampNanosecond(1667181600000000000, Some("Europe/London")) AND time <= TimestampNanosecond(1667181719999999999, Some("Europe/London")) [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, Some("Europe/London")), with space:Float64;N]
          Projection: data.TIME, data.bar, data.bool_field, data.f64_field, data.foo, data.i64_field, data.mixedCase, data.str_field, tz(data.time, Utf8("Europe/London")) AS time, data.with space [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, Some("Europe/London")), with space:Float64;N]
            Filter: data.f64_field IS NOT NULL [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
              TableScan: data [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
