core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select__wildcard_expressions-3.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT COUNT(*) FROM data\")"
---
Sort: time ASC NULLS LAST [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), count_TIME:Int64, count_bool_field:Int64, count_f64_field:Int64, count_i64_field:Int64, count_mixedCase:Int64, count_str_field:Int64, count_"with space":Int64]
  Projection: Dictionary(Int32, Utf8("data")) AS iox::measurement, TimestampNanosecond(0, None) AS time, count(data.TIME) AS count_TIME, count(data.bool_field) AS count_bool_field, count(data.f64_field) AS count_f64_field, count(data.i64_field) AS count_i64_field, count(data.mixedCase) AS count_mixedCase, count(data.str_field) AS count_str_field, count(data.with space) AS count_"with space" [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), count_TIME:Int64, count_bool_field:Int64, count_f64_field:Int64, count_i64_field:Int64, count_mixedCase:Int64, count_str_field:Int64, count_"with space":Int64]
    Filter: __aggr_count > Int64(0) [count(data.TIME):Int64, count(data.bool_field):Int64, count(data.f64_field):Int64, count(data.i64_field):Int64, count(data.mixedCase):Int64, count(data.str_field):Int64, count(data.with space):Int64, __aggr_count:Int64]
      Aggregate: groupBy=[[]], aggr=[[count(data.TIME), count(data.bool_field), count(data.f64_field), count(data.i64_field), count(data.mixedCase), count(data.str_field), count(data.with space), count(Int64(1)) AS __aggr_count]] [count(data.TIME):Int64, count(data.bool_field):Int64, count(data.f64_field):Int64, count(data.i64_field):Int64, count(data.mixedCase):Int64, count(data.str_field):Int64, count(data.with space):Int64, __aggr_count:Int64]
        Filter: data.TIME IS NOT NULL OR data.bool_field IS NOT NULL OR data.f64_field IS NOT NULL OR data.i64_field IS NOT NULL OR data.mixedCase IS NOT NULL OR data.str_field IS NOT NULL OR data.with space IS NOT NULL [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
          TableScan: data [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
