core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select__wildcard_expressions-4.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT FIRST(*) FROM data\")"
---
Sort: time ASC NULLS LAST [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), first_TIME:Boolean;N, first_bool_field:Boolean;N, first_f64_field:Float64;N, first_i64_field:Int64;N, first_mixedCase:Float64;N, first_str_field:Utf8;N, first_"with space":Float64;N]
  Projection: Dictionary(Int32, Utf8("data")) AS iox::measurement, TimestampNanosecond(0, None) AS time, get_field(selector_first(data.TIME,data.time), Utf8("value")) AS first_TIME, get_field(selector_first(data.bool_field,data.time), Utf8("value")) AS first_bool_field, get_field(selector_first(data.f64_field,data.time), Utf8("value")) AS first_f64_field, get_field(selector_first(data.i64_field,data.time), Utf8("value")) AS first_i64_field, get_field(selector_first(data.mixedCase,data.time), Utf8("value")) AS first_mixedCase, get_field(selector_first(data.str_field,data.time), Utf8("value")) AS first_str_field, get_field(selector_first(data.with space,data.time), Utf8("value")) AS first_"with space" [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), first_TIME:Boolean;N, first_bool_field:Boolean;N, first_f64_field:Float64;N, first_i64_field:Int64;N, first_mixedCase:Float64;N, first_str_field:Utf8;N, first_"with space":Float64;N]
    Filter: __aggr_count > Int64(0) [selector_first(data.TIME,data.time):Struct([Field { name: "value", data_type: Boolean, nullable: true }, Field { name: "time", data_type: Timestamp(Nanosecond, None), nullable: true }]);N, selector_first(data.bool_field,data.time):Struct([Field { name: "value", data_type: Boolean, nullable: true }, Field { name: "time", data_type: Timestamp(Nanosecond, None), nullable: true }]);N, selector_first(data.f64_field,data.time):Struct([Field { name: "value", data_type: Float64, nullable: true }, Field { name: "time", data_type: Timestamp(Nanosecond, None), nullable: true }]);N, selector_first(data.i64_field,data.time):Struct([Field { name: "value", data_type: Int64, nullable: true }, Field { name: "time", data_type: Timestamp(Nanosecond, None), nullable: true }]);N, selector_first(data.mixedCase,data.time):Struct([Field { name: "value", data_type: Float64, nullable: true }, Field { name: "time", data_type: Timestamp(Nanosecond, None), nullable: true }]);N, selector_first(data.str_field,data.time):Struct([Field { name: "value", data_type: Utf8, nullable: true }, Field { name: "time", data_type: Timestamp(Nanosecond, None), nullable: true }]);N, selector_first(data.with space,data.time):Struct([Field { name: "value", data_type: Float64, nullable: true }, Field { name: "time", data_type: Timestamp(Nanosecond, None), nullable: true }]);N, __aggr_count:Int64]
      Aggregate: groupBy=[[]], aggr=[[selector_first(data.TIME, data.time), selector_first(data.bool_field, data.time), selector_first(data.f64_field, data.time), selector_first(data.i64_field, data.time), selector_first(data.mixedCase, data.time), selector_first(data.str_field, data.time), selector_first(data.with space, data.time), count(Int64(1)) AS __aggr_count]] [selector_first(data.TIME,data.time):Struct([Field { name: "value", data_type: Boolean, nullable: true }, Field { name: "time", data_type: Timestamp(Nanosecond, None), nullable: true }]);N, selector_first(data.bool_field,data.time):Struct([Field { name: "value", data_type: Boolean, nullable: true }, Field { name: "time", data_type: Timestamp(Nanosecond, None), nullable: true }]);N, selector_first(data.f64_field,data.time):Struct([Field { name: "value", data_type: Float64, nullable: true }, Field { name: "time", data_type: Timestamp(Nanosecond, None), nullable: true }]);N, selector_first(data.i64_field,data.time):Struct([Field { name: "value", data_type: Int64, nullable: true }, Field { name: "time", data_type: Timestamp(Nanosecond, None), nullable: true }]);N, selector_first(data.mixedCase,data.time):Struct([Field { name: "value", data_type: Float64, nullable: true }, Field { name: "time", data_type: Timestamp(Nanosecond, None), nullable: true }]);N, selector_first(data.str_field,data.time):Struct([Field { name: "value", data_type: Utf8, nullable: true }, Field { name: "time", data_type: Timestamp(Nanosecond, None), nullable: true }]);N, selector_first(data.with space,data.time):Struct([Field { name: "value", data_type: Float64, nullable: true }, Field { name: "time", data_type: Timestamp(Nanosecond, None), nullable: true }]);N, __aggr_count:Int64]
        Filter: data.TIME IS NOT NULL OR data.bool_field IS NOT NULL OR data.f64_field IS NOT NULL OR data.i64_field IS NOT NULL OR data.mixedCase IS NOT NULL OR data.str_field IS NOT NULL OR data.with space IS NOT NULL [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
          TableScan: data [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
